refactor: 불필요한 메소드 제거 및 테스트 코드 리팩토링